--- a/style/pokedex.css
+++ b/style/pokedex.css
@@ -19,16 +19,16 @@ h1{
 }
 
 input[type="text"] {
-  padding: 10px;
-  margin-right: 15px;
-  border: none;
-  background-color: #3861ff;
-  border-bottom: solid 2px #c9c9c9;
-  transition: border 0.3s;
+    padding: 10px;
+    margin-right: 15px;
+    border: none;
+    background-color: #3861ff;
+    border-bottom: solid 2px #c9c9c9;
+    transition: border 0.3s;
 }
 input[type="text"]:focus,
 input[type="text"].focus {
-  border-bottom: solid 2px white;
+    border-bottom: solid 2px white;
 }
 
 .filter{
@@ -47,4 +47,8 @@ input[type="text"].focus {
 
 .poke-list table tr td span {
     margin-right: 5px;
+}
+
+.table-shadow {
+    background-color: rgba(0,0,0,.2);
 }
